Webove Gamestudio: Spracovanie formulara

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -33,7 +33,10 @@
 
     <article  id="links">
         <h2>Moje obľúbené hry</h2>
-        <p><a href="/minesweeper">MineSweeper</a></p>
+        <p>
+            Pripravil som pre vás nejaké hry, teda zatiaľ jednu.
+            Ak si chcete zahrať, <a href="/gamestudio">prejdite do môjho Gamestudia</a>.
+        </p>
 
     </article>
 
